Prodwork/testwork/atefarea/deploy-main.yaml
apiVersion: v1
kind: Service
metadata:  
 labels:
    run: nginx
 name: nginx-deploy-main
 namespace: brh
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx-main
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
