Prodwork/testwork/atefarea/ingressLTS.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app
spec:
#  ingressClassName: ingress-nginx
  defaultBackend:
    service:
      name: my-app
      port:
        number: 80
  rules:
  - host: my-app.local.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-app
            port:
              number: 80
