Prodwork/testwork/atefarea/nginx-demo.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: nginx-demo2
 annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
   kubernetes.io/ingress.class: "nginx-demo"
spec:
 rules:
 - host: nginx.demo2.proxym-it.tn
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: nginx-deploy-main
           port:
             number: 80
